<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.user.SignUpFragment">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Hello, Miljan!"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/header_subtitle"/>

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_confirmation_subtitle"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintBottom_toTopOf="@id/avatar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/color_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_subtitle"
        app:layout_constraintBottom_toTopOf="@id/website">
        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:contentDescription="@string/string_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="www.miljanpeles.com"
        android:textSize="14sp"
        android:textStyle="bold"
        android:autoLink="web"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/name"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Miljan"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="miljan@peles.rs"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/buttonBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>